add gsap animation into element

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "coconoutleaf",
         "Darabee",
+        "dependanc",
         "GSAP"
     ],
     "html-to-css-autocompletion.autocompletionFilesScope": "linked-files"
